--- a/html/style.css
+++ b/html/style.css
@@ -60,13 +60,16 @@ svg.open {
 
 h1{
   align-items: center;
-background-color: rgb(139, 58, 0);
+background-color: black;
 width: 250px;
-color: whitesmoke;
+color: rgb(22, 197, 255);
+
 
 }
 body {
-  background: black;
+  background: linear-gradient(135deg, rgba(255, 85, 0, 0.54) 25%, transparent 25%) -100px 0, linear-gradient(225deg, rgba(255, 85, 0, 0.54) 25%, transparent 25%) -100px 0, linear-gradient(315deg, rgba(255, 85, 0, 0.54) 25%, transparent 25%), linear-gradient(45deg, rgba(255, 85, 0, 0.54) 25%, transparent 25%);
+background-size: 200px 200px;
+background-color: #581313;
   color: azure;
 }
 .para1{
